--- a/log-in.html
+++ b/log-in.html
@@ -20,6 +20,56 @@
   </head>
 
   <body>
+    <!-- LOG IN / SIGN UP FORM -->
+    <div class="ui middle aligned center aligned grid">
+      <div class="column">
+        <h2 class="ui teal image header">
+          <img src="assets/images/logo.png" class="image" />
+          <div class="content">
+            Log-in to your account
+          </div>
+        </h2>
+        <form class="ui large form">
+          <div class="ui stacked segment">
+            <div class="field">
+              <div class="ui left icon input">
+                <i class="user icon"></i>
+                <input
+                  type="text"
+                  name="email"
+                  id="email-input"
+                  placeholder="E-mail address"
+                />
+              </div>
+            </div>
+            <div class="field">
+              <div class="ui left icon input">
+                <i class="lock icon"></i>
+                <input
+                  type="password"
+                  name="password"
+                  id="password-input"
+                  placeholder="Password"
+                />
+              </div>
+            </div>
+            <button class="ui fluid large submit button" id="submit-btn">
+              Log In
+            </button>
+          </div>
+
+          <div class="ui error message" id="error-message"></div>
+        </form>
+
+        <div class="ui message">
+          Don't have an account, yet?
+          <button id="signup-btn" class="ui small submit button">
+            Sign Up
+          </button>
+        </div>
+      </div>
+    </div>
+
     <!-- FIREBASE -->
     <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
     <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
