--- a/log-in.html
+++ b/log-in.html
@@ -16,14 +16,14 @@
       rel="stylesheet"
       href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"
     />
-    <link rel="stylesheet" href="log-in.css" />
+    <link rel="stylesheet" href="assets/css/log-in.css" />
   </head>
 
   <body>
     <!-- LOG IN / SIGN UP FORM -->
     <div class="ui middle aligned center aligned grid">
       <div class="column">
-        <h2 class="ui teal image header">
+        <h2 class="ui image header">
           <img src="assets/images/logo.png" class="image" />
           <div class="content">
             Log-in to your account
@@ -82,6 +82,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-    <script type="text/javascript" src="log-in.js"></script>
+    <script type="text/javascript" src="assets/javascript/log-in.js"></script>
   </body>
 </html>
