--- a/homepage.html
+++ b/homepage.html
@@ -9,7 +9,7 @@
 
     <!-- Site Properties -->
     <title>Homepage - Semantic</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/site.css">
 
     <link rel="stylesheet" type="text/css" href="./assets/css/container.css">
@@ -25,7 +25,24 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/list.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/icon.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/sidebar.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/transition.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/transition.css"> -->
+    <link rel="stylesheet" type="text/css" href="./assets/css/semantic.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="semantic/dist/semantic.min.js"></script>
+    <link rel="stylesheet" type="type/css" href="./assets/css/icon.css">
+    <link rel="stylesheet" type="type/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/themes/material/assets/fonts/icons.woff2">
+    <link rel="stylesheet" type="type/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/themes/material/assets/fonts/icons.woff">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+
+    <!-- Personal Styling Link -->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     <style type="text/css">
         .hidden.menu {
@@ -129,10 +146,10 @@
         }
     </style>
 
-    <script src="assets/library/jquery.min.js"></script>
-    <script src="../dist/components/visibility.js"></script>
-    <script src="../dist/components/sidebar.js"></script>
-    <script src="../dist/components/transition.js"></script>
+    <script src="./assets/javascript/app.js"></script>
+    <script src="./assets/javascript/visibility.js"></script>
+    <script src="./assets/javascript/sidebar.js"></script>
+    <script src="./assets/javascript/transition.js"></script>
     <script>
         $(document)
             .ready(function () {
@@ -165,29 +182,32 @@
     <!-- Following Menu -->
     <div class="ui large top fixed hidden menu">
         <div class="ui container">
-            <a class="active item">Home</a>
-            <a class="item">Work</a>
-            <a class="item">Company</a>
-            <a class="item">Careers</a>
+            <a class="active item" style="font-size: 24px">Home</a>
+            <a class="item" style="font-size: 24px">Discover</a>
+
             <div class="right menu">
-                <div class="item">
-                    <a class="ui button">Log in</a>
+                <i class="settings icon" style="color: white"></i>
+                <div class="content">
+                    Account Settings
+                    <div class="sub header">Manage your account settings and set e-mail preferences.</div>
                 </div>
-                <div class="item">
-                    <a class="ui primary button">Sign Up</a>
-                </div>
+                </h2>
             </div>
         </div>
     </div>
 
     <!-- Sidebar Menu -->
     <div class="ui vertical inverted sidebar menu">
-        <a class="active item">Home</a>
-        <a class="item">Work</a>
-        <a class="item">Company</a>
-        <a class="item">Careers</a>
-        <a class="item">Login</a>
-        <a class="item">Signup</a>
+        <a class="active item" style="font-size: 24px">Home</a>
+        <a class="item" style="font-size: 24px">Discover</a>
+
+        <h2 class="ui icon header">
+            <i class="settings icon" style="color: white"></i>
+            <div class="content">
+                Account Settings
+                <div class="sub header">Manage your account settings and set e-mail preferences.</div>
+            </div>
+        </h2>
     </div>
 
 
@@ -200,64 +220,59 @@
                     <a class="toc item">
                         <i class="sidebar icon"></i>
                     </a>
-                    <a class="active item">Home</a>
-                    <a class="item">Work</a>
-                    <a class="item">Company</a>
-                    <a class="item">Careers</a>
+                    <a class="active item" style="font-size: 24px">Home</a>
+                    <a class="item" style="font-size: 24px" href="discover.html">Discover</a>
+
+
                     <div class="right item">
-                        <a class="ui inverted button">Log in</a>
-                        <a class="ui inverted button">Sign Up</a>
+                        <h2 class="ui icon header">
+                            <i class="settings icon" style="color: white"></i>
+                            <div class="content" style="color: white">
+                                Account Settings
+                                <div class="sub header" style="color: white">Manage your account settings and set e-mail
+                                    preferences.</div>
+                            </div>
+                        </h2>
                     </div>
                 </div>
             </div>
 
             <div class="ui text container">
                 <h1 class="ui inverted header">
-                    Imagine-a-Company
+                    Mood Tracker
                 </h1>
-                <h2>Do whatever you want when you want to.</h2>
-                <div class="ui huge primary button">Get Started <i class="right arrow icon"></i></div>
+                <h2>If you want, share a little bit about yourself.</h2>
+                <div class="ui inverted primary button">
+                    <a href="addentry.html">Add Entry</button></a>
+                </div>
             </div>
 
         </div>
 
         <div class="ui vertical stripe segment">
-            <div class="ui middle aligned stackable grid container">
-                <div class="row">
-                    <div class="eight wide column">
-                        <h3 class="ui header">We Help Companies and Companions</h3>
-                        <p>We can give your company superpowers to do things that they never thought possible. Let us
-                            delight your customers and empower your needs...through pure data analytics.</p>
-                        <h3 class="ui header">We Make Bananas That Can Dance</h3>
-                        <p>Yes that's right, you thought it was the stuff of dreams, but even bananas can be
-                            bioengineered.</p>
-                    </div>
-                    <div class="six wide right floated column">
-                        <img src="assets/images/wireframe/white-image.png" class="ui large bordered rounded image">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="center aligned column">
-                        <a class="ui huge button">Check Them Out</a>
-                    </div>
-                </div>
-            </div>
+
         </div>
 
 
         <div class="ui vertical stripe quote segment">
             <div class="ui equal width stackable internally celled grid">
                 <div class="center aligned row">
-                    <div class="column">
-                        <h3>"What a Company"</h3>
-                        <p>That is what they all say about us</p>
+                    <div class="column music">
+                        <h3>Browse Music</h3>
+                        <i class="fas fa-arrow-right"></i>
+
+                        <strong><a href="https://open.spotify.com/playlist/6NyANZ6bIdvrrEtNFeA3SD"
+                                style="text-decoration: none" style="color: black" class="option">Here are some good
+                                vibes!</a></strong> <i class="fas fa-arrow-left"></i>
+
+
                     </div>
-                    <div class="column">
-                        <h3>"I shouldn't have gone with their competitor."</h3>
-                        <p>
-                            <img src="assets/images/avatar/nan.jpg" class="ui avatar image"> <b>Nan</b> Chief Fun
-                            Officer Acme Toys
-                        </p>
+                    <div class="column quote">
+                        <h3>Healing Words and Inspiring Quotes</h3>
+
+                        <i class="fas fa-arrow-right"></i>
+                        <strong><a href="https://quotes-generator.com/" class="option">Find some
+                                words of wisdom.</a></strong> <i class="fas fa-arrow-left"></i>
                     </div>
                 </div>
             </div>
