--- a/homepage.html
+++ b/homepage.html
@@ -212,7 +212,7 @@
 
 
     <!-- Page Contents -->
-    <div class="pusher">
+    <div class="pusher top">
         <div class="ui inverted vertical masthead center aligned segment">
 
             <div class="ui container">
@@ -229,8 +229,10 @@
                             <i class="settings icon" style="color: white"></i>
                             <div class="content" style="color: white">
                                 Account Settings
-                                <div class="sub header" style="color: white">Manage your account settings and set e-mail
-                                    preferences.</div>
+                                <div class="sub header" style="color: white">
+                                    <a href="settings.html">
+                                        Manage your account settings and set e-mail
+                                        preferences.</div></a>
                             </div>
                         </h2>
                     </div>
@@ -264,6 +266,7 @@
                         <strong><a href="https://open.spotify.com/playlist/6NyANZ6bIdvrrEtNFeA3SD"
                                 style="text-decoration: none" style="color: black" class="option">Here are some good
                                 vibes!</a></strong> <i class="fas fa-arrow-left"></i>
+
 
 
                     </div>
