--- a/log-in.html
+++ b/log-in.html
@@ -59,7 +59,10 @@
           </div>
 
           <!-- ERROR MESSAGES -->
-          <div id="error-message" class="ui error message">
+          <div id="email-error-message" class="ui error message">
+            <p id="letter" class="invalid">Email must be valid</p>
+          </div>
+          <div id="password-error-message" class="ui error message">
             <h3>Password must contain the following:</h3>
             <p id="letter" class="invalid">
               A <strong>lowercase</strong> letter
