small stylesheet changes

--- a/discover.html
+++ b/discover.html
@@ -22,7 +22,7 @@
 
   <body class="site">
     <!-- NAVIGATION -->
-    <div class="ui secondary pointing menu">
+    <div class="ui sticky secondary pointing menu">
       <a class="item">
         Home
       </a>
@@ -51,10 +51,24 @@
         <div class="swiper-wrapper">
           <!-- Slides -->
           <div class="swiper-slide">
-            <div class="ui card">
+            <a href="https://www.youtube.com/embed/WWloIAQpMcQ">
+              <div class="ui card listen">
               <div class="content">
-                <div class="center aligned header">Jenny Hess</div>
-                <div class="center aligned description">
+                <div class="center aligned header card-heading">How to Cope with Anxiety</div>
+                <div class="center aligned description card-body">
+                  <p>
+                    TED Talk by Olivia Remes
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          </a>
+          <div class="swiper-slide">
+            <div class="ui card listen">
+              <div class="content">
+                <div class="center aligned header card-heading">Jenny Hess</div>
+                <div class="center aligned description card-body ">
                   <p>
                     Jenny is a student studying Media Management at the New
                     School
@@ -64,10 +78,24 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <div class="ui card">
+            <a href="https://youtu.be/JUedQ0_EGCQ">
+            <div class="ui card listen">
               <div class="content">
-                <div class="center aligned header">Jenny Hess</div>
-                <div class="center aligned description">
+                <div class="center aligned header card-heading">Living with High Functioning Anxiety</div>
+                <div class="center aligned description card-body">
+                  <p>
+                    TED Talk by Jordan Raskopoulos
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          </a>
+          <div class="swiper-slide">
+            <div class="ui card listen">
+              <div class="content">
+                <div class="center aligned header card-heading">Jenny Hess</div>
+                <div class="center aligned description card-body">
                   <p>
                     Jenny is a student studying Media Management at the New
                     School
@@ -77,36 +105,10 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <div class="ui card">
+            <div class="ui card listen">
               <div class="content">
-                <div class="center aligned header">Jenny Hess</div>
-                <div class="center aligned description">
-                  <p>
-                    Jenny is a student studying Media Management at the New
-                    School
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="ui card">
-              <div class="content">
-                <div class="center aligned header">Jenny Hess</div>
-                <div class="center aligned description">
-                  <p>
-                    Jenny is a student studying Media Management at the New
-                    School
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="ui card">
-              <div class="content">
-                <div class="center aligned header">Jenny Hess</div>
-                <div class="center aligned description">
+                <div class="center aligned header card-heading">Jenny Hess</div>
+                <div class="center aligned description card-body">
                   <p>
                     Jenny is a student studying Media Management at the New
                     School
@@ -129,7 +131,7 @@
         <div class="swiper-wrapper">
           <!-- Slides -->
           <div class="swiper-slide">
-            <div class="ui card">
+            <div class="ui card watch">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
                 <div class="center aligned description">
@@ -142,7 +144,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <div class="ui card">
+            <div class="ui card watch">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
                 <div class="center aligned description">
@@ -155,7 +157,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <div class="ui card">
+            <div class="ui card watch">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
                 <div class="center aligned description">
@@ -168,7 +170,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <div class="ui card">
+            <div class="ui card watch">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
                 <div class="center aligned description">
@@ -181,7 +183,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <div class="ui card">
+            <div class="ui card watch">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
                 <div class="center aligned description">
@@ -207,7 +209,7 @@
         <div class="swiper-wrapper">
           <!-- Slides -->
           <div class="swiper-slide">
-            <div class="ui card">
+            <div class="ui card read">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
                 <div class="center aligned description">
@@ -220,7 +222,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <div class="ui card">
+            <div class="ui card read">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
                 <div class="center aligned description">
@@ -233,7 +235,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <div class="ui card">
+            <div class="ui card read">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
                 <div class="center aligned description">
@@ -246,7 +248,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <div class="ui card">
+            <div class="ui card read">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
                 <div class="center aligned description">
@@ -259,7 +261,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <div class="ui card">
+            <div class="ui card read">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
                 <div class="center aligned description">
