added empty hrefs to cards to be edited later

--- a/discover.html
+++ b/discover.html
@@ -65,6 +65,7 @@
           </div>
           </a>
           <div class="swiper-slide">
+            <a href="#">
             <div class="ui card listen">
               <div class="content">
                 <div class="center aligned header card-heading">Jenny Hess</div>
@@ -76,6 +77,7 @@
                 </div>
               </div>
             </div>
+            </a>
           </div>
           <div class="swiper-slide">
             <a href="https://youtu.be/JUedQ0_EGCQ">
@@ -92,6 +94,7 @@
           </div>
           </a>
           <div class="swiper-slide">
+            <a href="#">
             <div class="ui card listen">
               <div class="content">
                 <div class="center aligned header card-heading">Jenny Hess</div>
@@ -103,8 +106,10 @@
                 </div>
               </div>
             </div>
+            </a>
           </div>
           <div class="swiper-slide">
+            <a href="#">
             <div class="ui card listen">
               <div class="content">
                 <div class="center aligned header card-heading">Jenny Hess</div>
@@ -116,6 +121,7 @@
                 </div>
               </div>
             </div>
+            </a>
           </div>
         </div>
         <!-- If we need navigation buttons -->
@@ -131,6 +137,7 @@
         <div class="swiper-wrapper">
           <!-- Slides -->
           <div class="swiper-slide">
+            <a href="#">
             <div class="ui card watch">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
@@ -142,8 +149,10 @@
                 </div>
               </div>
             </div>
+            </a>
           </div>
           <div class="swiper-slide">
+            <a href="#">
             <div class="ui card watch">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
@@ -155,8 +164,10 @@
                 </div>
               </div>
             </div>
+            </a>
           </div>
           <div class="swiper-slide">
+            <a href="#">
             <div class="ui card watch">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
@@ -168,8 +179,10 @@
                 </div>
               </div>
             </div>
+            </a>
           </div>
           <div class="swiper-slide">
+            <a href="#">
             <div class="ui card watch">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
@@ -181,8 +194,10 @@
                 </div>
               </div>
             </div>
+            </a>
           </div>
           <div class="swiper-slide">
+            <a href="#">
             <div class="ui card watch">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
@@ -194,6 +209,7 @@
                 </div>
               </div>
             </div>
+            </a>
           </div>
         </div>
         <!-- If we need navigation buttons -->
@@ -209,6 +225,7 @@
         <div class="swiper-wrapper">
           <!-- Slides -->
           <div class="swiper-slide">
+            <a href="#">
             <div class="ui card read">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
@@ -220,8 +237,10 @@
                 </div>
               </div>
             </div>
+            </a>
           </div>
           <div class="swiper-slide">
+            <a href="#">
             <div class="ui card read">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
@@ -233,8 +252,10 @@
                 </div>
               </div>
             </div>
+            </a>
           </div>
           <div class="swiper-slide">
+            <a href="#">
             <div class="ui card read">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
@@ -246,8 +267,10 @@
                 </div>
               </div>
             </div>
+            </a>
           </div>
           <div class="swiper-slide">
+            <a href="#">
             <div class="ui card read">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
@@ -259,8 +282,10 @@
                 </div>
               </div>
             </div>
+            </a>
           </div>
           <div class="swiper-slide">
+            <a href="#">
             <div class="ui card read">
               <div class="content">
                 <div class="center aligned header">Jenny Hess</div>
@@ -272,6 +297,7 @@
                 </div>
               </div>
             </div>
+            </a>
           </div>
         </div>
         <!-- If we need navigation buttons -->
