small stylesheet fixes

--- a/discover.html
+++ b/discover.html
@@ -68,11 +68,10 @@
             <a href="#">
             <div class="ui card listen">
               <div class="content">
-                <div class="center aligned header card-heading">Jenny Hess</div>
-                <div class="center aligned description card-body ">
+                <div class="center aligned header card-heading">Title</div>
+                <div class="center aligned description card-body">
                   <p>
-                    Jenny is a student studying Media Management at the New
-                    School
+                    Description Description Description Description Description Description
                   </p>
                 </div>
               </div>
@@ -97,11 +96,10 @@
             <a href="#">
             <div class="ui card listen">
               <div class="content">
-                <div class="center aligned header card-heading">Jenny Hess</div>
+                <div class="center aligned header card-heading">Title</div>
                 <div class="center aligned description card-body">
                   <p>
-                    Jenny is a student studying Media Management at the New
-                    School
+                    Description Description Description Description Description Description
                   </p>
                 </div>
               </div>
@@ -112,11 +110,10 @@
             <a href="#">
             <div class="ui card listen">
               <div class="content">
-                <div class="center aligned header card-heading">Jenny Hess</div>
+                <div class="center aligned header card-heading">Title</div>
                 <div class="center aligned description card-body">
                   <p>
-                    Jenny is a student studying Media Management at the New
-                    School
+                    Description Description Description Description Description Description
                   </p>
                 </div>
               </div>
@@ -140,11 +137,10 @@
             <a href="#">
             <div class="ui card watch">
               <div class="content">
-                <div class="center aligned header">Jenny Hess</div>
-                <div class="center aligned description">
+                <div class="center aligned header card-heading">Title</div>
+                <div class="center aligned description card-body">
                   <p>
-                    Jenny is a student studying Media Management at the New
-                    School
+                    Description Description Description Description Description Description
                   </p>
                 </div>
               </div>
@@ -155,11 +151,10 @@
             <a href="#">
             <div class="ui card watch">
               <div class="content">
-                <div class="center aligned header">Jenny Hess</div>
-                <div class="center aligned description">
+                <div class="center aligned header card-heading">Title</div>
+                <div class="center aligned description card-body">
                   <p>
-                    Jenny is a student studying Media Management at the New
-                    School
+                    Description Description Description Description Description Description
                   </p>
                 </div>
               </div>
@@ -170,11 +165,10 @@
             <a href="#">
             <div class="ui card watch">
               <div class="content">
-                <div class="center aligned header">Jenny Hess</div>
-                <div class="center aligned description">
+                <div class="center aligned header card-heading">Title</div>
+                <div class="center aligned description card-body">
                   <p>
-                    Jenny is a student studying Media Management at the New
-                    School
+                    Description Description Description Description Description Description
                   </p>
                 </div>
               </div>
@@ -185,11 +179,10 @@
             <a href="#">
             <div class="ui card watch">
               <div class="content">
-                <div class="center aligned header">Jenny Hess</div>
-                <div class="center aligned description">
+                <div class="center aligned header card-heading">Title</div>
+                <div class="center aligned description card-body">
                   <p>
-                    Jenny is a student studying Media Management at the New
-                    School
+                    Description Description Description Description Description Description
                   </p>
                 </div>
               </div>
@@ -200,11 +193,10 @@
             <a href="#">
             <div class="ui card watch">
               <div class="content">
-                <div class="center aligned header">Jenny Hess</div>
-                <div class="center aligned description">
+                <div class="center aligned header card-heading">Title</div>
+                <div class="center aligned description card-body">
                   <p>
-                    Jenny is a student studying Media Management at the New
-                    School
+                    Description Description Description Description Description Description
                   </p>
                 </div>
               </div>
@@ -228,11 +220,10 @@
             <a href="#">
             <div class="ui card read">
               <div class="content">
-                <div class="center aligned header">Jenny Hess</div>
-                <div class="center aligned description">
+                <div class="center aligned header card-heading">Title</div>
+                <div class="center aligned description card-body">
                   <p>
-                    Jenny is a student studying Media Management at the New
-                    School
+                    Description Description Description Description Description Description
                   </p>
                 </div>
               </div>
@@ -243,11 +234,10 @@
             <a href="#">
             <div class="ui card read">
               <div class="content">
-                <div class="center aligned header">Jenny Hess</div>
-                <div class="center aligned description">
+                <div class="center aligned header card-heading">Title</div>
+                <div class="center aligned description card-body">
                   <p>
-                    Jenny is a student studying Media Management at the New
-                    School
+                    Description Description Description Description Description Description
                   </p>
                 </div>
               </div>
@@ -258,11 +248,10 @@
             <a href="#">
             <div class="ui card read">
               <div class="content">
-                <div class="center aligned header">Jenny Hess</div>
-                <div class="center aligned description">
+                <div class="center aligned header card-heading">Title</div>
+                <div class="center aligned description card-body">
                   <p>
-                    Jenny is a student studying Media Management at the New
-                    School
+                    Description Description Description Description Description Description
                   </p>
                 </div>
               </div>
@@ -273,11 +262,10 @@
             <a href="#">
             <div class="ui card read">
               <div class="content">
-                <div class="center aligned header">Jenny Hess</div>
-                <div class="center aligned description">
+                <div class="center aligned header card-heading">Title</div>
+                <div class="center aligned description card-body">
                   <p>
-                    Jenny is a student studying Media Management at the New
-                    School
+                    Description Description Description Description Description Description
                   </p>
                 </div>
               </div>
@@ -288,11 +276,10 @@
             <a href="#">
             <div class="ui card read">
               <div class="content">
-                <div class="center aligned header">Jenny Hess</div>
-                <div class="center aligned description">
+                <div class="center aligned header card-heading">Title</div>
+                <div class="center aligned description card-body">
                   <p>
-                    Jenny is a student studying Media Management at the New
-                    School
+                    Description Description Description Description Description Description
                   </p>
                 </div>
               </div>
