some changes to stylesheet

--- a/add-entry.html
+++ b/add-entry.html
@@ -46,7 +46,7 @@
     <main class="site-content">
       <div class="summary">
         <!-- DATE -->
-        <h3 id="display-date"></h3>
+        <h3 id="display-date" class="heading"></h3>
         <div id="mood-states">
         <button id="exhilirated" class="mood">exhilirated</button>
         <button id="happy" class="mood">happy</button>
@@ -77,7 +77,7 @@
       <div id="display-comments">
         <div class="ui form">
           <div class="field">
-            <h3>Additional Comments:</h3>
+            <h3 class="heading">Additional Comments:</h3>
             <textarea id="userComment"></textarea>
             <button type="submit" id="continue-btn">Continue</button>
           </div>
