code to store answers started

--- a/add-entry.html
+++ b/add-entry.html
@@ -49,23 +49,23 @@
       <div id="mood-states" class="ui grid">
         <div class="five column row">
           <div class="column">
-            <button id="exhilirated" class="mood" data-mood="exhilirated"></button>
+            <button id="exhilirated" class="mood" data-mood="exhilirated" value=5></button>
             <p class="mood-text">exhilirated</p>
           </div>
           <div class="column">
-            <button id="happy" class="mood" data-mood="happy"></button>
+            <button id="happy" class="mood" data-mood="happy" value=4></button>
             <p class="mood-text">happy</p>
           </div>
           <div class="column">
-            <button id="moderate" class="mood" data-mood="moderate"></button>
+            <button id="moderate" class="mood" data-mood="moderate" value=3></button>
             <p class="mood-text">moderate</p>
           </div>
           <div class="column">
-            <button id="sad" class="mood" data-mood="sad"></button>
+            <button id="sad" class="mood" data-mood="sad" value=2></button>
             <p class="mood-text">sad</p>
           </div>
           <div class="column">
-            <button id="depressed" class="mood" data-mood="depressed"></button>
+            <button id="depressed" class="mood" data-mood="depressed" value=1></button>
             <p class="mood-text">depressed</p>
           </div>
         </div>
@@ -75,17 +75,17 @@
       <!-- QUESTION ANSWERS -->
       <div id="question-answers">
         <p id="questionA" class="question"></p>
-          <button id="answer-1A" class="answer-opt"></button>
-          <button id="answer-2A" class="answer-opt"></button>
-          <button id="answer-3A" class="answer-opt"></button>
+          <button id="answer-1A" class="answer-opt-1"></button>
+          <button id="answer-2A" class="answer-opt-1"></button>
+          <button id="answer-3A" class="answer-opt-1"></button>
         <p id="questionB" class="question"></p>
-          <button id="answer-1B" class="answer-opt"></button>
-          <button id="answer-2B" class="answer-opt"></button>
-          <button id="answer-3B" class="answer-opt"></button>
+          <button id="answer-1B" class="answer-opt-2"></button>
+          <button id="answer-2B" class="answer-opt-2"></button>
+          <button id="answer-3B" class="answer-opt-2"></button>
         <p id="questionC" class="question"></p>
-          <button id="answer-1C" class="answer-opt"></button>
-          <button id="answer-2C" class="answer-opt"></button>
-          <button id="answer-3C" class="answer-opt"></button>
+          <button id="answer-1C" class="answer-opt-3"></button>
+          <button id="answer-2C" class="answer-opt-3"></button>
+          <button id="answer-3C" class="answer-opt-3"></button>
       </div>
 
       <hr>
