tried to add code

--- a/homepage.html
+++ b/homepage.html
@@ -29,7 +29,26 @@
 
   <body>
     <!-- NAVIGATION -->
-    <div class="pusher top">
+    <div class="ui sticky secondary pointing menu">
+      <a class="active item">
+        Home
+      </a>
+      <a class="item">
+        Add Entry
+      </a>
+      <a class="item">
+        Overview
+      </a>
+      <a class="item">
+        Discover
+      </a>
+      <div class="right menu">
+        <a class="ui item" id="login">
+          Log In
+        </a>
+      </div>
+    </div>
+
       <div class="ui inverted vertical masthead center aligned segment">
         <div class="ui container">
           <div class="ui large secondary inverted pointing menu">
