log-in and log-out successful

--- a/log-in.html
+++ b/log-in.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Log-In</title>
+    <title>Moodsphere - Log In</title>
 
     <!-- STYLESHEETS: SEMANTIC UI, GOOGLE FONTS, CUSTOM -->
     <link
@@ -26,7 +26,7 @@
         <h2 class="ui image header">
           <img src="assets/images/logo.png" class="image" />
           <div class="content">
-            Log-in to your account
+            Log In to your account
           </div>
         </h2>
         <form class="ui large form">
