add-entry modal code completed

--- a/overview.html
+++ b/overview.html
@@ -47,23 +47,13 @@
         <h3 id="display-date"></h3>
         <!-- QUESTION ANSWERS -->
         <div id="question-answers">
-          <div id="answer-1">
-            Answer Answer Answer Answer Answer Answer Answer
-          </div>
-          <div id="answer-2">
-            Answer Answer Answer Answer Answer Answer Answer
-          </div>
-          <div id="answer-3">
-            Answer Answer Answer Answer Answer Answer Answer
-          </div>
+          <div id="answer-1"></div>
+          <div id="answer-2"></div>
+          <div id="answer-3"></div>
         </div>
 
         <!-- COMMENTS -->
-        <div id="display-comments">
-          Comments Comments Comments Comments Comments Comments Comments
-          Comments Comments Comments Comments Comments Comments Comments
-          Comments
-        </div>
+        <div id="display-comments-overview"></div>
       </div>
     </main>
 
@@ -72,7 +62,9 @@
 
     <!-- FIREBASE -->
     <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
     <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-database.js"></script>
 
     <!-- JAVASCRIPT, JQUERY -->
     <script
