log-in button coded

--- a/log-in.html
+++ b/log-in.html
@@ -53,7 +53,7 @@
                 />
               </div>
             </div>
-            <button class="ui fluid large submit button" id="submit-btn">
+            <button class="ui fluid large submit button" id="login-btn">
               Log In
             </button>
           </div>
