quote API added

--- a/homepage.html
+++ b/homepage.html
@@ -43,8 +43,8 @@
         Discover
       </a>
       <div class="right menu">
-        <a class="ui item" id="login">
-          Log In
+        <a class="ui item" id="logout-btn">
+          Logout
         </a>
       </div>
     </div>
@@ -52,11 +52,6 @@
       <div class="ui inverted vertical masthead center aligned segment">
         <div class="ui container">
           <div class="ui large secondary inverted pointing menu">
-            <a class="toc item"><i class="sidebar icon"></i></a>
-            <a class="active item" style="font-size: 24px">Home</a>
-            <a class="item" style="font-size: 24px" href="discover.html"
-              >Discover</a
-            >
             <div class="right item">
               <h2 class="ui icon header">
                 <i class="settings icon" style="color: white"></i>
@@ -76,13 +71,8 @@
         <!-- MAIN CONTENT -->
         <div class="ui text container">
           <h1 class="ui inverted header">Moodsphere</h1>
-          <h2>If you want, share a little bit about yourself.</h2>
-          <div class="ui inverted primary button">
-            <a href="add-entry.html">Add Entry</a>
-          </div>
-          <div class="ui inverted primary button">
-            <a href="overview.html">Overview</a>
-          </div>
+          <h2 id="quote"></h2>
+          <h4 id="author"></h4>
         </div>
       </div>
 
